src/test/ui/fat-ptr-cast.stderr
error[E0606]: casting `&[i32]` as `usize` is invalid
  --> $DIR/fat-ptr-cast.rs:10:5
   |
LL |     a as usize;
   |     ^^^^^^^^^^
   |
   = help: cast through a raw pointer first

error[E0606]: casting `&[i32]` as `isize` is invalid
  --> $DIR/fat-ptr-cast.rs:11:5
   |
LL |     a as isize;
   |     ^^^^^^^^^^
   |
   = help: cast through a raw pointer first

error[E0606]: casting `&[i32]` as `i16` is invalid
  --> $DIR/fat-ptr-cast.rs:12:5
   |
LL |     a as i16;
   |     ^^^^^^^^
   |
   = help: cast through a raw pointer first

error[E0606]: casting `&[i32]` as `u32` is invalid
  --> $DIR/fat-ptr-cast.rs:13:5
   |
LL |     a as u32;
   |     ^^^^^^^^
   |
   = help: cast through a raw pointer first

error[E0605]: non-primitive cast: `std::boxed::Box<[i32]>` as `usize`
  --> $DIR/fat-ptr-cast.rs:14:5
   |
LL |     b as usize;
   |     ^^^^^^^^^^
   |
   = note: an `as` expression can only be used to convert between primitive types. Consider using the `From` trait

error[E0606]: casting `*const [i32]` as `usize` is invalid
  --> $DIR/fat-ptr-cast.rs:15:5
   |
LL |     p as usize;
   |     ^^^^^^^^^^
   |
   = help: cast through a thin pointer first

error[E0607]: cannot cast thin pointer `*const i32` to fat pointer `*const [i32]`
  --> $DIR/fat-ptr-cast.rs:19:5
   |
LL |     q as *const [i32];
   |     ^^^^^^^^^^^^^^^^^

error[E0606]: casting `usize` as `*mut (dyn Trait + 'static)` is invalid
  --> $DIR/fat-ptr-cast.rs:22:41
   |
LL |     let t: *mut (dyn Trait + 'static) = 0 as *mut _;
   |                                         ^^^^^^^^^^^

error[E0606]: casting `usize` as `*const str` is invalid
  --> $DIR/fat-ptr-cast.rs:23:32
   |
LL |     let mut fail: *const str = 0 as *const str;
   |                                ^^^^^^^^^^^^^^^

error: aborting due to 9 previous errors

Some errors have detailed explanations: E0605, E0606, E0607.
For more information about an error, try `rustc --explain E0605`.
